--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,6 +15,7 @@ jobs:
         node-version: [14.x, 16.x, 18.x]
 
     steps:
+      - name: Checkout code
       - uses: actions/checkout@v3
 
       - name: Setup Node.js
@@ -23,8 +24,14 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
         
+      - name: Install dependencies
       - run: npm ci
-      - run: npm test -- --coverage
+
+      - name: Run tests with coverage
+      - run: npm run test-cov
+
+      - name: Verify report existing
+      - run: ls coverage/lcov.info
 
       - name: Parallel Coveralls
         if: always()
