--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
       - name: Checkout code
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -25,13 +25,13 @@ jobs:
           cache: "npm"
         
       - name: Install dependencies
-      - run: npm ci
+        run: npm ci
 
       - name: Run tests with coverage
-      - run: npm run test-cov
+        run: npm run test-cov
 
       - name: Verify report existing
-      - run: ls coverage/lcov.info
+        run: ls coverage/lcov.info
 
       - name: Parallel Coveralls
         if: always()
