--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,9 +37,11 @@ jobs:
         if: always()
         uses: coverallsapp/github-action@master
         with:
-          github-token: ${{ secrets.COVERALLS_TOKEN }}
-          flag-name: run-${{ matrix.node-version }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          coveralls-token: ${{ secrets.COVERALLS_TOKEN }}
           parallel: true
+          flag-name: run-${{ matrix.node-version }}
+          
 
   coveralls:
     name: Coveralls Finish
@@ -50,5 +52,6 @@ jobs:
       - name: Coveralls Finish
         uses: coverallsapp/github-action@master
         with:
-          github-token: ${{ secrets.COVERALLS_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          coveralls-token: ${{ secrets.COVERALLS_TOKEN }}
           parallel-finished: true
