--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "@babel/preset-env": "^7.26.0",
     "babel-jest": "^29.7.0",
     "c8": "^10.1.2",
-    "coveralls": "^3.1.1",
     "jest": "^29.7.0"
   },
   "jest": {
     "transform": {
       "^.+\\.js$": "babel-jest"
     },
-    "collectCoverageFrom": ["src/**/*.{js,jsx}"]
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}"
+    ]
   },
   "c8": {
     "include": [
