--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@babel/preset-env": "^7.26.0",
     "babel-jest": "^29.7.0",
     "c8": "^10.1.2",
-    "jest": "^29.7.0",
-    "coveralls": "^3.1.1"
+    "coveralls": "^3.1.1",
+    "jest": "^29.7.0"
   },
   "jest": {
     "transform": {
       "^.+\\.js$": "babel-jest"
-    }
+    },
+    "testEnvironment": "node",
+    "testMatch": ["**/__tests__/**/*.test.js"]
   },
   "c8": {
     "include": [
