--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,18 +30,16 @@ jobs:
       - name: Run tests with coverage
         run: npm run test-cov
 
-      - name: Generate lcov report
-        run: npm run report
+      - run: npm run report
 
-      - name: Verify lcov report exists
-        run: ls -lah coverage/lcov.info
+      - name: Verify report existing
+        run: ls coverage/lcov.info
 
-      - name: Upload to Coveralls
+      - name: Parallel Coveralls
         if: always()
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.COVERALLS_TOKEN }}
-          path-to-lcov: coverage/lcov.info
           parallel: true
           flag-name: run-${{ matrix.node-version }}
 
@@ -51,7 +49,7 @@ jobs:
     if: always()
     runs-on: ubuntu-latest
     steps:
-      - name: Finalize Coveralls
+      - name: Coveralls Finish
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.COVERALLS_TOKEN }}
