--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "jest",
     "test-cov": "c8 jest",
-    "report": "c8 report --reporter=text-lcov > coverage/lcov.info"
+    "report": "c8 report --reporter=text-lcov > coverage.lcov"
   },
   "author": "",
   "license": "MIT",
@@ -16,15 +16,15 @@
     "@babel/preset-env": "^7.26.0",
     "babel-jest": "^29.7.0",
     "c8": "^10.1.2",
-    "coveralls": "^3.1.1",
     "jest": "^29.7.0"
   },
   "jest": {
     "transform": {
       "^.+\\.js$": "babel-jest"
     },
-    "testEnvironment": "node",
-    "testMatch": ["**/__tests__/**/*.test.js"]
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}"
+    ]
   },
   "c8": {
     "include": [
