--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "babel-jest": "^29.7.0",
+    "babel-loader": "^9.2.1",
     "c8": "^10.1.2",
     "jest": "^29.7.0"
   },
