--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: 18.x
 
     steps:
       - name: Checkout code
@@ -23,17 +23,14 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-
+        
       - name: Install dependencies
         run: npm ci
 
       - name: Run tests with coverage
         run: npm run test-cov
-
+        
       - run: npm run report
-
-      - name: Verify report existing
-        run: ls coverage/lcov.info
 
       - name: Parallel Coveralls
         if: always()
@@ -42,6 +39,7 @@ jobs:
           github-token: ${{ secrets.COVERALLS_TOKEN }}
           parallel: true
           flag-name: run-${{ matrix.node-version }}
+          
 
   coveralls:
     name: Coveralls Finish
